Agregando Modelos InventarioCliente y LlenadoGratis y sus controladores, para la Venta
